Allow running tests with default java.version